@@ -1,6 +1,7 @@
 // Microsoft Visual C++ generated resource script.
 //
 #include "resource.h"
+#include "vpversion.h"
 
 #define APSTUDIO_READONLY_SYMBOLS
 /////////////////////////////////////////////////////////////////////////////
@@ -225,7 +226,7 @@ BEGIN
     CTEXT           "This application uses Visual Basic Scripting Edition by Microsoft",IDC_STATIC,7,198,150,17
     CONTROL         IDC_RIGHTFLIPPERBUTTON,IDC_STATIC,"Static",SS_BITMAP,7,7,94,27
     LTEXT           "A Randy Davis Production",IDC_STATIC,13,36,94,23
-    LTEXT           "Version 9.9.5",IDC_STATIC,13,47,121,16
+    LTEXT           STR(Version VP_VERSION_MAJOR.VP_VERSION_MINOR.VP_VERSION_REV),IDC_STATIC,13,47,121,16
     GROUPBOX        "Credits",IDC_STATIC,7,62,216,103
     LTEXT           "Randy Davis - designer, developer",IDC_STATIC,13,77,115,9
     LTEXT           "Noah Fentz - testing",IDC_STATIC,150,77,66,9
@@ -257,7 +258,7 @@ FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     CONTROL         "Enable Fast FXAA",IDC_FFXAA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,165,90,10
     CONTROL         "Enable Quality FXAA",IDC_QFXAA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,175,90,10
-    CONTROL         "Enable 4xAntiAliasing",IDC_AA_ALL_TABLES,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,14,185,126,10
+    CONTROL         "Enable 4xAntiAliasing",IDC_AA_ALL_TABLES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP | WS_DISABLED,14,185,126,10
     CONTROL         "Stretch Ball with Table",IDC_StretchNo,"Button",BS_AUTORADIOBUTTON | WS_GROUP,16,212,83,10
     CONTROL         "Don't stretch the Ball",IDC_StretchYes,"Button",BS_AUTORADIOBUTTON,16,222,81,10
     CONTROL         "At Full Screen anti-stretch the Ball",IDC_StretchMonitor,
@@ -428,23 +429,23 @@ BEGIN
     COMBOBOX        IDC_JOYPMENTER,438,69,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     GROUPBOX        "Axis Assignments",IDC_STATIC,258,101,233,82
     LTEXT           "X Axis (L/R)",IDC_STATIC,265,113,39,8
-    COMBOBOX        IDC_LRAXISCOMBO,308,112,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Reverse Axis",IDC_LRAXISFLIP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,364,113,55,10
+    COMBOBOX        IDC_LRAXISCOMBO,307,112,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Reverse Axis",IDC_LRAXISFLIP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,363,113,55,10
     RTEXT           "X-Gain",IDC_STATIC,431,113,25,8
     EDITTEXT        IDC_LRAXISGAIN,460,112,20,13,ES_RIGHT | ES_AUTOHSCROLL
     LTEXT           "%",IDC_STATIC,482,113,8,8
     LTEXT           "Y Axis (U/D)",IDC_STATIC,265,131,41,8
-    COMBOBOX        IDC_UDAXISCOMBO,308,130,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Reverse Axis",IDC_UDAXISFLIP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,363,131,54,10
+    COMBOBOX        IDC_UDAXISCOMBO,307,130,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Reverse Axis",IDC_UDAXISFLIP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,363,131,55,10
     RTEXT           "Y-Gain",IDC_STATIC,431,131,25,8
     EDITTEXT        IDC_UDAXISGAIN,460,130,20,13,ES_RIGHT | ES_AUTOHSCROLL
     LTEXT           "%",IDC_STATIC,482,131,8,8
     LTEXT           "Plunger",IDC_STATIC,265,149,41,8
-    COMBOBOX        IDC_PLUNGERAXIS,308,148,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Reverse Axis",IDC_ReversePlunger,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,364,149,55,10
+    COMBOBOX        IDC_PLUNGERAXIS,307,148,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Reverse Axis",IDC_ReversePlunger,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,363,149,55,10
     RTEXT           "Dead Zone",IDC_STATIC,421,149,36,8
-    EDITTEXT        IDC_DEADZONEAMT,460,147,20,13,ES_RIGHT | ES_AUTOHSCROLL
-    LTEXT           "%",IDC_STATIC,482,148,8,8
+    EDITTEXT        IDC_DEADZONEAMT,460,148,20,13,ES_RIGHT | ES_AUTOHSCROLL
+    LTEXT           "%",IDC_STATIC,482,149,8,8
     LTEXT           "Pl. Speed",IDC_STATIC,265,164,34,8
     COMBOBOX        IDC_PLUNGERSPEEDAXIS,308,163,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Scale",IDC_STATIC,362,164,19,8
@@ -1776,10 +1777,6 @@ BEGIN
         BOTTOMMARGIN, 280
     END
 
-    IDD_KEYS, DIALOG
-    BEGIN
-    END
-
     IDD_PHYSICS_OPTIONS, DIALOG
     BEGIN
         RIGHTMARGIN, 194
@@ -1850,8 +1847,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 9,9,5,0
- PRODUCTVERSION 9,9,5,0
+ FILEVERSION VP_VERSION_MAJOR, VP_VERSION_MINOR, VP_VERSION_REV, 0
+ PRODUCTVERSION VP_VERSION_MAJOR, VP_VERSION_MINOR, VP_VERSION_REV, 0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -1866,13 +1863,13 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "FileDescription", "Visual Pinball 9.9.5"
-            VALUE "FileVersion", "9, 9, 5, 0"
+            VALUE "FileDescription", "Visual Pinball " VP_VERSION_STRING
+            VALUE "FileVersion", VP_VERSION_STRING_COMMAS
             VALUE "InternalName", "Visual Pinball"
             VALUE "LegalCopyright", "Copyright 2000-2017"
             VALUE "OriginalFilename", "VPinball995.exe"
             VALUE "ProductName", "Visual Pinball"
-            VALUE "ProductVersion", "9, 9, 5, 0"
+            VALUE "ProductVersion", VP_VERSION_STRING_COMMAS
         END
     END
     BLOCK "VarFileInfo"
@@ -1888,41 +1885,23 @@ END
 //
 
 IDR_VPINBALL            REGISTRY                "res\\vpinball.rgs"
-
 IDR_SURFACE             REGISTRY                "res\\surface.rgs"
-
 IDR_DRAG_POINT          REGISTRY                "res\\dragpoint.rgs"
-
 IDR_FLIPPER             REGISTRY                "res\\flipper.rgs"
-
 IDR_TIMER               REGISTRY                "res\\timer.rgs"
-
 IDR_PLUNGER             REGISTRY                "res\\plunger.rgs"
-
 IDR_TEXTBOX             REGISTRY                "res\\textbox.rgs"
-
 IDR_BUMPER              REGISTRY                "res\\bumper.rgs"
-
 IDR_PI_EVENT_HANDLER    REGISTRY                "res\\pieventhandler.rgs"
-
 IDR_TRIGGER             REGISTRY                "res\\trigger.rgs"
-
 IDR_LIGHT               REGISTRY                "res\\light.rgs"
-
 IDR_KICKER              REGISTRY                "res\\kicker.rgs"
-
 IDR_GATE                REGISTRY                "res\\gate.rgs"
-
 IDR_SPINNER             REGISTRY                "res\\spinner.rgs"
-
 IDR_RAMP                REGISTRY                "res\\ramp.rgs"
-
 IDR_DISP_REEL           REGISTRY                "res\\dispreel.rgs"
-
 IDR_LIGHT_SEQ           REGISTRY                "res\\lightseq.rgs"
-
 IDR_PRIMITIVE           REGISTRY                "res\\primitive.rgs"
-
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -2107,27 +2086,16 @@ END
 //
 
 IDB_TOOLBAR             BITMAP                  "res\\toolbar.bmp"
-
 IDB_TRIGGER             BITMAP                  "res\\trigger.bmp"
-
 IDB_TIMER               BITMAP                  "res\\timer.bmp"
-
 IDB_FLIPPER             BITMAP                  "res\\flipper.bmp"
-
 IDB_LIGHT               BITMAP                  "res\\light.bmp"
-
 IDB_BALL                BITMAP                  "res\\ball.bmp"
-
 IDB_WHITE               BITMAP                  "res\\white.bmp"
-
 IDB_SUNBURST            BITMAP                  "res\\sunburst.bmp"
-
 IDB_SUNBURST2           BITMAP                  "res\\sunburst2.bmp"
-
 IDB_LOGO                BITMAP                  "res\\logo.bmp"
-
 IDB_CHEVRON             BITMAP                  "res\\chevron.bmp"
-
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -2189,17 +2157,11 @@ END
 // Icon with lowest ID value placed first to ensure application icon
 // remains consistent on all systems.
 IDI_VPINBALL            ICON                    "res\\vpinball.ico"
-
 IDI_SCRIPT              ICON                    "res\\script.ico"
-
 IDI_TABLE               ICON                    "res\\table.ico"
-
 IDI_PLAY                ICON                    "res\\play.ico"
-
 IDI_PAUSE               ICON                    "res\\pause.ico"
-
 IDI_STEP                ICON                    "res\\step.ico"
-
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -2207,43 +2169,24 @@ IDI_STEP                ICON                    "res\\step.ico"
 //
 
 IDC_MAGNIFY             CURSOR                  "res\\magnify.cur"
-
 IDC_LIGHT               CURSOR                  "res\\light.cur"
-
 IDC_WALL                CURSOR                  "res\\wall.cur"
-
 IDC_FLIPPER             CURSOR                  "res\\flipper.cur"
-
 IDC_TRIGGER             CURSOR                  "res\\trigger.cur"
-
 IDC_GATE                CURSOR                  "res\\gate.cur"
-
 IDC_TIMER               CURSOR                  "res\\timer.cur"
-
 IDC_PLUNGER             CURSOR                  "res\\plunger.cur"
-
 IDC_TEXTBOX             CURSOR                  "res\\textbox.cur"
-
 IDC_BUMPER              CURSOR                  "res\\bumper.cur"
-
 IDC_KICKER              CURSOR                  "res\\kicker.cur"
-
 IDC_TARGET              CURSOR                  "res\\target.cur"
-
 IDC_DECAL               CURSOR                  "res\\decal.cur"
-
 IDC_SPINNER             CURSOR                  "res\\spinner.cur"
-
 IDC_RAMP                CURSOR                  "res\\ramp.cur"
-
 IDC_DISP_REEL           CURSOR                  "res\\dispreel.cur"
-
 IDC_LIGHT_SEQ           CURSOR                  "res\\lightseq.cur"
-
 IDC_PRIMITIVE           CURSOR                  "res\\primitive.cur"
-
 IDC_FLASHER             CURSOR                  "res\\flasher.cur"
-
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -2251,7 +2194,6 @@ IDC_FLASHER             CURSOR                  "res\\flasher.cur"
 //
 
 IDR_TABLE               TABLE                   "res\\table.vpt"
-
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -2268,17 +2210,6 @@ BEGIN
 0x3631, 0x313a, 0x0030, 
     IDC_MonitorCombo, 0x403, 5, 0
 0x3132, 0x393a, "\000" 
-    0
-END
-
-
-/////////////////////////////////////////////////////////////////////////////
-//
-// AFX_DIALOG_LAYOUT
-//
-
-IDD_KEYS AFX_DIALOG_LAYOUT
-BEGIN
     0
 END
 
