@@ -1,3 +1,12 @@
+TO BE DETERMINED
+----------------
+- add support for new I/O controller capabilities, for compatible controller devices
+  see: http://mjrnet.org/pinscape/OpenPinballDevice/NewPinCabInput.htm, http://mjrnet.org/pinscape/OpenPinballDevice/OpenPinballDeviceHID.htm
+ 1) velocity-based nudge input
+ 2) plunger speed input
+ 3) Open Pinball Device HID interface
+
+
 VP 9.9.5b Changelog
 ------------------------
 - fix "all sounds to rear channels" bug
